cmake_minimum_required(VERSION 3.13)
project(Project C)

set(CMAKE_C_STANDARD 99)

add_executable(Algorithms main.c 141-LinkedListCycle/linkedListCycle.c 141-LinkedListCycle/linkedListCycle.h 137-SingleNumber2/singleNumber2.c 137-SingleNumber2/singleNumber2.h 136-SingleNumber/singleNumber.c 136-SingleNumber/singleNumber.h 125-ValidPalindrome/validPalindrome.c 125-ValidPalindrome/validPalindrome.h 344-ReverseString/reverseString.c 344-ReverseString/reverseString.h 316-RemoveDuplicateLetters/removeDuplicateLetters.c 316-RemoveDuplicateLetters/removeDuplicateLetters.h 067-AddBinary/addBinary.c 067-AddBinary/addBinary.h)